tests/rosetta/out/Java/almkvist-giullera-formula-for-pi.error
parse: error[P999]: /workspace/mochi/tests/rosetta/x/Mochi/almkvist-giullera-formula-for-pi.mochi:8:21: unexpected token "-1" (expected "]")
  --> /workspace/mochi/tests/rosetta/x/Mochi/almkvist-giullera-formula-for-pi.mochi:8:21

  8 |   while n > 1 && a[n-1] == 0 {
    |                     ^

help:
  Parse error occurred. Check syntax near this location.